--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
     <application
             android:name=".app.WeatherApp"
             android:allowBackup="true"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/common.app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".presentation.MainActivity">
+        <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
